<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".ui.DetailUserActivity"
    tools:keep="@layout/activity_detail_user">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_photo"
                android:layout_width="113dp"
                android:layout_height="152dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:paddingEnd="24dp"
                android:src="@android:color/darker_gray"
                app:civ_border_width="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.014"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints,RtlSymmetry" />

            <TextView
                android:id="@+id/tvDetailUsername"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:paddingTop="24dp"
                android:text="@string/username"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/tvDetailName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/img_photo"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/tvDetailName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/name"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/tvDetailUsername"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/img_photo"/>

            <TextView
                android:id="@+id/tvDetailCompany"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/company"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/tvDetailName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/img_photo"/>

            <TextView
                android:id="@+id/tvDetailLocation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="24dp"
                android:text="@string/location"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/tvDetailCompany"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/img_photo"/>

            <TextView
                android:id="@+id/tvDetailFollowing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvDetailCompany"
                android:layout_marginStart="24dp"
                android:layout_marginTop="36dp"
                android:ellipsize="end"
                android:maxLines="3"
                android:text="@string/following"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.917"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDetailLocation" />

            <TextView
                android:id="@+id/tvDetailFollowers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/tvDetailFollowing"
                android:layout_marginStart="24dp"
                android:layout_marginTop="36dp"
                android:layout_toEndOf="@+id/tvDetailFollowing"
                android:ellipsize="end"
                android:maxLines="3"
                android:text="@string/followers"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/tvDetailFollowing"
                app:layout_constraintHorizontal_bias="0.517"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDetailLocation" />

            <TextView
                android:id="@+id/tvDetailRepository"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/tvDetailFollowers"
                android:layout_marginTop="36dp"
                android:layout_toEndOf="@+id/tvDetailFollowers"
                android:ellipsize="end"
                android:maxLines="3"
                android:text="@string/repository"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/tvDetailFollowers"
                app:layout_constraintHorizontal_bias="0.123"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDetailLocation" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="28dp"
                app:layout_constraintTop_toBottomOf="@+id/tvDetailRepository"
                app:tabMode="fixed"
                app:tabRippleColor="@null"
                tools:ignore="MissingConstraints,SpeakableTextPresentCheck"
                tools:layout_editor_absoluteX="16dp" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="52dp"
                android:layout_marginBottom="60dp"

                app:layout_constraintTop_toBottomOf="@+id/tvDetailRepository"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginTop="60dp"
            android:foregroundGravity="bottom"
            app:fabSize="normal"
            android:src="@drawable/ic_favorite_border"
            app:layout_anchor="@id/tvDetailLocation"
            app:layout_anchorGravity="bottom|end"
            android:contentDescription="@string/todo" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</ScrollView>